My portfolio project

--- a/index.html
+++ b/index.html
@@ -87,15 +87,26 @@
                     <i class="bi bi-search"></i>
                     <input type="text" placeholder="Search Music..">
                 </div>
-                <div class="user">
-                    <img src="images/falogo.png" alt="user" title=""> <!--image still needed here-->>
-                </div>
+                <!-- <div class="user">
+                    <img src="images/falogo.png" alt="user" title=""> image still needed here-->
+                <!-- </div> --> 
             </nav>
             <div class="content">
-                <h1>Alan walker-Fade</h1>
+                <h1>Tatiana Manaois-It will always be Yours</h1>
                 <p>
-                    You were the shadow to did you feel us another start you fade<br>
-                    Away afraid aim is out of sight wanna see us alive
+                    I was sitting up late last night
+                    Swimming in my thoughts, too deep
+                    Thinking about my past life<br>
+                    And everything in between
+                    And I remember I'd go running
+                    Trying to find the love I lost<br>
+                    'Cause dealing with the empty spaces
+                    Inside of me, was way too hard<br>
+                    So instead I would love somebody else
+                    Hoping they were the ones
+                    So I let myself go falling, babe<br>
+                    I was all in, baby
+                    
                 </p>
                 <div class="buttons">
                     <button>PLAY</button>
@@ -263,8 +274,8 @@
                 <div class="wave1"></div>
                 <div class="wave1"></div>
             </div>
-            <img src="images/tatiana.jpg" alt="alan">
-            <h5>Helplessly<br>
+            <img src="images/tatiana.jpg" alt="alan" id="poster_master">
+            <h5 id="title">Helplessly<br>
                 <div class="subtitle">Tatiana Manaois</div>
             </h5>
             <div class="icon">
